fix view button on mobile

--- a/editor/src/app/components/command-list/command-list.component.scss
+++ b/editor/src/app/components/command-list/command-list.component.scss
@@ -7,4 +7,5 @@ code {
   position: absolute;
   right: 0.5rem;
   top: 0.5rem;
+  z-index: 1;
 }
